--- a/back-end/views/index.ejs
+++ b/back-end/views/index.ejs
@@ -49,7 +49,15 @@
 							
 
 							<% } %>
-					
+							<% if (_isLoged) { %> 
+								<li class="menu__item" >
+									<a class="logout" data-reg="#registr" href="/logout">Выход <span></span>
+										<span></span> <span></span> <span></span></a>
+								</li>
+						
+							
+
+							<% } %>
 
 				
 							<li class="menu__item">
@@ -414,22 +422,14 @@
 								<img alt="user" class="img__user" src="/images/user4.jpg">
 								<p class="slider__name">Карен</p>
 							</div>
-							<p class="slider__text">Я очень люблю спорт,но самостоятельно заработать с помощью ставок
-								мне было очень трудно я часто уходил в минус.Мне посоветовали хорошего каппера Игоря
-								Кравченка!Результат превзошел мои ожидания:доход за первый месяц получился не скромный
-								примерно 110% и это при том,что другие капперы присылали провальные прогнозы и я терпел
-								не мало неудач.Планирую и дальше работать со Smartbets.</p>
+							<p class="slider__text">Очень трудно самому держать свой банк в плюсе.Победы чередовались с проигрошами,но после того как подписался на подписку подписку банк начал немного расти,но справедливости ради ставлю небольшие сумы.Ну а так дело каждого кто хочет сам ставит,а кто пользуеться услугами компании!</p>
 						</div>
 						<div class="slider-rewiev">
 							<div class="slider-photo">
 								<img alt="user" class="img__user" src="/images/user2.jpg">
 								<p class="slider__name">Женя</p>
 							</div>
-							<p class="slider__text">Я очень люблю спорт,но самостоятельно заработать с помощью ставок
-								мне было очень трудно я часто уходил в минус.Мне посоветовали хорошего каппера Игоря
-								Кравченка!Результат превзошел мои ожидания:доход за первый месяц получился не скромный
-								примерно 110% и это при том,что другие капперы присылали провальные прогнозы и я терпел
-								не мало неудач.Планирую и дальше работать со Smartbets.</p>
+							<p class="slider__text">Ставил всегда исключительно по фану и в основном на события которые популярные и небольшие сумы,но я хотел зарабатывать больше и с минимальным риском!Мне один из друзей посоветовал команду капперов и теперь для меня это хороший пассивный доход!</p>
 						</div>
 					</div>
 				</div>
@@ -563,7 +563,7 @@
 				<div class="col-lg-12">
 					<div class="footer-block d-flex flex-column align-items-center">
 						<p class="footer__text">. Информация носит информационный характер. 18+”</p>
-						<p class="footer__copy">&copy;2019 <a href="index.html">smartbets.ru</a></p>
+						<p class="footer__copy">&copy;2019 <a href="index.html">smartbets.su</a></p>
 					</div>
 				</div>
 			</div>
@@ -777,9 +777,9 @@
 								<form class="form-login text-center d-flex flex-column" id="form-login"
 									name="form-login">
 									<label for="login__email"><input class="login__email" name="email-login"
-											placeholder="Email" type="email" value="vlad77777@mail.ru"></label> <label
+											placeholder="Email" type="email" value=""></label> <label
 										for="login__pass"><input class="login__pass" name="-login-pass"
-											placeholder="Пароль" type="password" value="77777"></label>
+											placeholder="Пароль" type="password" value=""></label>
 									<div class="col-lg-12 text-center">
 										<button class="btn btn-primary btn-login">Войти</button>
 									</div>
