--- a/back-end/public/css/style2.css
+++ b/back-end/public/css/style2.css
@@ -1,9 +1,30 @@
+/* спецификация */
+
+ul, li {
+	margin: 0;
+	padding: 0;
+	display: block;
+}
+img {
+	display: block;
+}
+body {
+	background-color: #fff;
+}
+.container {
+	position: relative;
+	padding: 0 15px;
+	font-family: 'PT Sans', sans-serif;
+}
+
+
+
+/* header */
 .header-slider, .header, .content, .our-team, .rewiev, .contacts, .ask, footer {
 	background-color: #fff;
 }
 .header .container {
 	background-color: #000;
-	font-family: 'PT Sans', sans-serif;
 }
 .header {
 	background-color: #fff;
@@ -99,7 +120,6 @@
 .main .container {
 	background: #fff;
 	padding: 30px 0;
-	font-family: 'PT Sans', sans-serif;
 }
 .subscription-title, .about-title, .section__title, .calc-title {
 	color: #323232;
@@ -112,7 +132,6 @@
 	background-color: #fff;
 	width: auto;
 	height: 385px;
-	font-family: 'PT Sans', sans-serif;
 	margin: 0 auto;
 	border-radius: 5px;
 	padding: 100px 0;
@@ -177,9 +196,7 @@ label {
 }
 /* about */
 
-.about .container {
-	font-family: 'PT Sans', sans-serif;
-}
+
 .about-text {
 	width: 600px;
 	color: grey;
@@ -212,7 +229,7 @@ label {
 .calc .container {
 	background-color: #fff;
 	padding-top: 50px;
-	font-family: 'PT Sans', sans-serif;
+
 }
 .calc-money {
 	background-image: url('https://clipart.info/images/ccovers/1510437647Alexandre-Lacazette-Arsenal-2017-18-Png.png');
@@ -260,7 +277,6 @@ label {
 
 .info .container {
 	background: #fff;
-	font-family: 'PT Sans', sans-serif;
 }
 .table {
 	background-color: #fff;
