--- a/back-end/views/welcome.ejs
+++ b/back-end/views/welcome.ejs
@@ -8,7 +8,7 @@
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="/css/animate.css" rel="stylesheet">
-	<link href="/css/style3.css" rel="stylesheet">
+	<link href="/css/style4.css" rel="stylesheet">
 	<link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Lato|PT+Sans|Roboto|Varela+Round&display=swap" rel="stylesheet">
     <title>Document</title>
@@ -18,19 +18,64 @@
 
 <div class="header">
     <div class="container">
-    <div class="nav-menu">
-        <ul class="menu">
-            <li class="menu__item"><a href="/" class="link__item">Главная</a></li>
-            <li class="menu__item"><a href="/buy" class="link__item">Инфо про подписку</a></li>
-
-        </ul>
-    </div>
+ <div class="row">
+     <div class="col-lg-12">
+        <div class="nav-menu">
+            <ul class="menu d-flex justify-content-center">
+                <li class="menu__item"><a href="/" class="link__item">Главная</a></li>
+                <li class="menu__item"><a href="/buy" class="link__item">Инфо про подписку</a></li>
+                <li class="menu__item"> <p class="p__item"><%= user.name %></p></li>
+    
+            </ul>
+        </div>
+        <h1 class="welcome-title text-center">Приветствуем Вас на нашем сайте!</h1>
+     </div>
+ </div>
 
             </div>
         </div>
+
+    <div class="main">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="instruction">
+                        <h2 class="inst__title">
+                            Как приобрести прогноз или оформить подписку?
+                        </h2>
+                        <h3 class="inst__title2">Все очень просто</h3>
+                        <ol class="menu__inst">
+                            <li class="inst__item">Выбираете тариф или подписку</li>
+                            <li class="inst__item">нажимаете на кнопку купить прогноз</li>
+                            <li class="inst__item">переходите оплатить онлайн</li>
+                            <li class="inst__item">после оплаты мы высылаем вам прогноз на ваш емейл и вы его сможете видеть на этой странице! </li>
+
+                        </ol>
+                       <div class="btns__buy d-flex ">
+                           <button class="btn__rate"><a href="/card?price=1200&rate=Бомба%20">Хочу купить прогноз</a></button>
+                           <button class="btn__rate"><a href="/card?price=25500&rate=Подписка%20">Хочу оформить подписку</a></button>
+                       </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                
+                    <div class="our__rewiev__img clip-path"></div>
+  
+              
+                
+                    
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 d-flex justify-content-end">
+                        <img src="http://emoticons.do.am/1/110/9.png" class="mem__img" alt="mem">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
-<p><%= user.name %></p>
+   
+
 
 
 
