--- a/back-end/views/card.ejs
+++ b/back-end/views/card.ejs
@@ -93,5 +93,20 @@
 	</script> 
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
 	</script>
+
+	<!-- /////////////// -->
+	<form method="POST" accept-charset="utf-8" action="https://www.liqpay.ua/api/3/checkout">
+		<input type="hidden" name="data" value="eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJwdWJsaWNfa2V5IjoiaTg4MjkxNDk3NDYiLCJhbW91bnQiOiIxMCIsImN1cnJlbmN5IjoiUlVCIiwiZGVzY3JpcHRpb24iOiLQnNC+0Lkg0YLQvtCy0LDRgCIsInR5cGUiOiJidXkiLCJyZXN1bHRfdXJsIjoiaHR0cDovL3NtYXJ0YmV0cy5zdS9wYXktY2FsbGJhY2siLCJsYW5ndWFnZSI6InJ1In0=" />
+		<input type="hidden" name="signature" value="720vLXwU5rx77+bfLolNPw75tQo=" />
+		<button style="border: none !important; display:inline-block !important;text-align: center !important;padding: 7px 20px !important;
+			color: #fff !important; font-size:16px !important; font-weight: 600 !important; font-family:OpenSans, sans-serif; cursor: pointer !important; border-radius: 2px !important;
+			background: rgb(122,183,43) !important;"onmouseover="this.style.opacity='0.5';" onmouseout="this.style.opacity='1';">
+			<img src="https://static.liqpay.ua/buttons/logo-small.png" name="btn_text"
+				style="margin-right: 7px !important; vertical-align: middle !important;"/>
+			<span style="vertical-align:middle !important">Оплатить 10 RUB</span>
+		</button>
+	</form>
+	
+	<!-- <script src="//static.liqpay.ua/libjs/checkout.js" async></script> -->
 </body>
 </html>
