--- a/back-end/views/buy.ejs
+++ b/back-end/views/buy.ejs
@@ -29,7 +29,7 @@
 								<a href="/">Главная</a>
 							</li>
 							<li class="menu__item">
-								<a href="#">Купить прогноз</a>
+								<a href="/#our-rate">Купить прогноз</a>
 							</li>
 						</ul>
 					</div>
@@ -40,7 +40,7 @@
 						<h1 class="name-company">Smart Bets</h1><img alt="logo" class="img__logo" src="/images/NewProvidence.png"></a>
 					</div>
 				</div>
-				<div class="col-lg-3 ml-auto">
+				<div class="col-lg-3">
 					<div class="login d-flex animated fadeInRight">
 						<a class="login__app" href="https://www.apple.com/ios/app-store/"><i class="fa fa-apple"></i> Get App</a>
 					</div>
@@ -59,11 +59,11 @@
 					<h2 class="subscription-title text-center">МЕСЯЦ ВЫИГРЫШНЫХ СТАВОК ОТ SmartBets</h2>
 				</div>
 			</div>
-			<div class="subscription">
+			<div class="subscription" >
 				<div class="subscription-service d-flex">
 					<div class="row">
 						<div class="col-lg-6 ml-auto">
-							<p class="subscription-text">Оплатив подписку на месяц, ежедневно Вы будете получать матчи тарифных планов “Старт” и “Плюс”.Профит, при усредненных показателях, составит +7100% или +7100$ .Следуя всем нашим рекомендациям, в ближайшее время вы сможете выйти на стабильную прибыль в 100 000 - 200 000 рублей в месяц.</p>
+							<p class="subscription-text" id="podpiska">Оплатив подписку на месяц, ежедневно Вы будете получать матчи тарифных планов “Старт” и “Плюс”.Профит, при усредненных показателях, составит +7100% или +7100$ .Следуя всем нашим рекомендациям, в ближайшее время вы сможете выйти на стабильную прибыль в 100 000 - 200 000 рублей в месяц.</p>
 						</div><svg viewbox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
 						<path d="M 18 32.34 l -8.34 -8.34 -2.83 2.83 11.17 11.17 24 -24 -2.83 -2.83 z" fill="transparent" stroke="#3da35a"></path></svg>
 						<div class="col-lg-4">
