--- a/back-end/views/welcome.ejs
+++ b/back-end/views/welcome.ejs
@@ -52,8 +52,8 @@
 
                         </ol>
                        <div class="btns__buy d-flex ">
-                           <button class="btn__rate"><a href="/card?price=1200&rate=Бомба%20">Хочу купить прогноз</a></button>
-                           <button class="btn__rate"><a href="/card?price=25500&rate=Подписка%20">Хочу оформить подписку</a></button>
+                           <button class="btn__rate"><a href="/#our-rate">Хочу купить прогноз</a></button>
+                           <button class="btn__rate"><a href="/buy">Хочу оформить подписку</a></button>
                        </div>
                     </div>
                 </div>
