--- a/back-end/public/css/style2.css
+++ b/back-end/public/css/style2.css
@@ -5,9 +5,7 @@ ul, li {
 	padding: 0;
 	display: block;
 }
-img {
-	display: block;
-}
+
 body {
 	background-color: #fff;
 }
@@ -37,7 +35,7 @@ body {
 }
 .menu {
 	width: 500px;
-	margin-top: 20px;
+	margin-top: 7px;
 	list-style: none;
 }
 .nav-menu .menu .menu__item a {
@@ -81,7 +79,7 @@ body {
 	text-align: center;
 	position: absolute;
 	bottom: 8px;
-	right: 80px;
+	right: 38px;
 }
 .login__app i {
 	margin-right: 10px;
@@ -91,7 +89,7 @@ body {
 	font-weight: bolder;
 	text-decoration: none;
 	color: #fff;
-	background: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif);
+	background: url('https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif');
 	background-size: cover;
 	color: transparent;
 	line-height: 55px;
@@ -111,6 +109,7 @@ body {
 	width: 100%;
 	height: 45vh;
 	background-attachment: fixed;
+	background-position: center;
 }
 .bg-2 .container {
 	background-image: url('https://images.unsplash.com/photo-1552874031-b9c207ed9292?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60');
@@ -354,6 +353,7 @@ footer img {
 	}
 	.login__app {
 		margin: 0 200px;
+		right: 88px;
 	}
 	.paralax .container {
 		width: 100%;
