--- a/back-end/views/card.ejs
+++ b/back-end/views/card.ejs
@@ -96,14 +96,14 @@
 
 	<!-- /////////////// -->
 	<form method="POST" accept-charset="utf-8" action="https://www.liqpay.ua/api/3/checkout">
-		<input type="hidden" name="data" value="eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJwdWJsaWNfa2V5IjoiaTg4MjkxNDk3NDYiLCJhbW91bnQiOiIxMCIsImN1cnJlbmN5IjoiUlVCIiwiZGVzY3JpcHRpb24iOiLQnNC+0Lkg0YLQvtCy0LDRgCIsInR5cGUiOiJidXkiLCJyZXN1bHRfdXJsIjoiaHR0cDovL3NtYXJ0YmV0cy5zdS9wYXktY2FsbGJhY2siLCJsYW5ndWFnZSI6InJ1In0=" />
-		<input type="hidden" name="signature" value="720vLXwU5rx77+bfLolNPw75tQo=" />
+		<input type="hidden" name="data" value="eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJwdWJsaWNfa2V5IjoiaTkwOTI5MDE3OTQxIiwiYW1vdW50IjoiNTUiLCJjdXJyZW5jeSI6IlVBSCIsImRlc2NyaXB0aW9uIjoi0JzQvtC5INGC0L7QstCw0YAiLCJ0eXBlIjoiYnV5IiwibGFuZ3VhZ2UiOiJydSJ9" />
+		<input type="hidden" name="signature" value="aCyKWJxEQ/8vYiSrYdBPa7BRdsI=" />
 		<button style="border: none !important; display:inline-block !important;text-align: center !important;padding: 7px 20px !important;
 			color: #fff !important; font-size:16px !important; font-weight: 600 !important; font-family:OpenSans, sans-serif; cursor: pointer !important; border-radius: 2px !important;
 			background: rgb(122,183,43) !important;"onmouseover="this.style.opacity='0.5';" onmouseout="this.style.opacity='1';">
 			<img src="https://static.liqpay.ua/buttons/logo-small.png" name="btn_text"
 				style="margin-right: 7px !important; vertical-align: middle !important;"/>
-			<span style="vertical-align:middle !important">Оплатить 10 RUB</span>
+			<span style="vertical-align:middle !important">Оплатить 55 UAH</span>
 		</button>
 	</form>
 	
