--- a/back-end/views/index.ejs
+++ b/back-end/views/index.ejs
@@ -35,7 +35,7 @@
 									<span></span></a>
 							</li>
 							<li class="menu__item">
-								<a  href="/card?price=400&rate=Старт%20">Купить прогноз <span></span> <span></span> <span></span> <span></span></a>
+								<a  href="/#super-express">Купить прогноз <span></span> <span></span> <span></span> <span></span></a>
 							</li>
 							<% if (!_isLoged) { %> 
 								<li class="menu__item" >
@@ -150,7 +150,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<h2 class="service-slogan text-center">Цены на прогнозы</h2>
+					<h2 class="service-slogan text-center" id="our-rate">Цены на прогнозы</h2>
 				</div>
 			</div>
 			<div class="section-wrap d-flex justify-content-center name">
@@ -235,7 +235,7 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<div class="super-bet">
+					<div class="super-bet" id="super-express">
 						<img alt="money" class="img-service" src="images/hulk.svg">
 						<h3 class="service-title">Супер Экспресс</h3>
 						<p class="service-price">11999 &#8381</p>
